--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,27 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/home"
+        android:id="@+id/action_locker"
         android:enabled="true"
-        android:icon="@drawable/ic_home"
-        android:title="홈"
-        app:showAsAction="always"
-    />
+        android:icon="@drawable/baseline_lock_open_24"
+        android:title="개인음식보관"/>
 
     <item
-        android:id="@+id/setting"
+        android:id="@+id/action_refrigerator"
         android:enabled="true"
-        android:icon="@drawable/ic_settings"
-        android:title="설정"
-        app:showAsAction="always"
-        />
+        android:icon="@drawable/baseline_kitchen_24"
+        android:title="공유냉장고"/>
 
     <item
-        android:id="@+id/info"
+        android:id="@+id/action_home"
         android:enabled="true"
-        android:icon="@drawable/ic_home"
-        android:title="정보"
-        app:showAsAction="always"
-        />
+        android:icon="@drawable/baseline_house_24"
+        android:title="홈"/>
+
+    <item
+        android:id="@+id/action_board"
+        android:enabled="true"
+        android:icon="@drawable/baseline_event_note_24"
+        android:title="게시판"/>
+
+    <item
+        android:id="@+id/action_myPage"
+        android:enabled="true"
+        android:icon="@drawable/baseline_person_24"
+        android:title="마이페이지"/>
 </menu>
