--- a/app/src/main/res/layout/frag2.xml
+++ b/app/src/main/res/layout/frag2.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -172,49 +173,8 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="81dp"
-                android:layout_marginTop="8dp"
-                android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/productImageView"
-                    android:layout_width="74dp"
-                    android:layout_height="79dp"
-                    android:scaleType="fitCenter" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="8dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/productNameTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="#131313"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/quantityTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="#131313"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:id="@+id/expiryDateTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="#131313"
-                        android:textSize="14sp" />
-
-                </LinearLayout>
-
-            </LinearLayout>
+            <include layout="@layout/item_product" />
 
         </LinearLayout>
 
